
/**
 *	布尔
 */
enum E_BOOL
{
	BOOL_UNKNOWN 							= -1;							// 未知或不支持
	BOOL_NO									= 0;							// 否
	BOOL_YES								= 1;							// 是
}

/**
 *	性别类型
 */
enum E_SEX_TYPE											
{
	SEX_TYPE_UNKNOWN=0;										// 未知或不支持
	SEX_TYPE_MAN = 1;										// 男性
	SEX_TYPE_WOMAN =2;										// 女性
}


/**
 *	人种肤色
 */
enum E_RACE_TYPE
{
	RACE_TYPE_UNKOWN 						= -1;							// 未知或不支持
	RACE_TYPE_YELLOW 						= 0;							// 黄种人
	RACE_TYPE_BLACK							= 1;							// 黑种人
	RACE_TYPE_WHITE							= 2;							// 白种人
	RACE_TYPE_UIGUER						= 3;							// 维族人
}

/**
 *	矩形信息
 */
message RECT_INFO
{
	optional  float   	x				= 1;	// 边界框左上角点的X轴坐标, 0.001~1
	optional  float  	y				= 2;	// 边界框左上角点的Y轴坐标, 0.001~1	
	optional  float  	width			= 3;	// 边界框的宽度, 0.001~1
	optional  float  	height			= 4;	// 边界框的高度, 0.001~1
}
/**
 *	日期时间
 */
message DATE_TIME
{
	optional  int32   	year   			= 1;	// 年
	optional  int32  	month      		= 2;	// 月
	optional  int32  	day      		= 3;	// 日
	optional  int32  	hour      		= 4;	// 时
	optional  int32  	minute     		= 5;	// 分
	optional  int32  	second     		= 6;	// 秒
}

/**
 *	报警上报基本信息
 */
message MESSAGE_BASE_INFO
{
	optional  string					logId				= 1;	// 告警Id
	optional  DATE_TIME					alarmTime			= 2;	// 黑名单失效时间
	optional  string					deviceId			= 3;	// 设备ID或门ID
	optional  string					ip					= 4;	// 设备IP
	optional  string					name				= 5;	// 录设备名称或门名称
	optional  float						longitude			= 6;	// 设备经度
	optional  float						latitude			= 7;	// 设备纬度
	optional  float						altitude			= 8;	// 设备高度
	optional  int32						channel				= 9;	// 通道 门禁为读卡头
}


/**
 *	人脸检测报警上报消息[人脸比对]
 */
message FACE_DETECT_MESSAGE
{
	optional  MESSAGE_BASE_INFO			alarm				= 1;	// 告警Id
	optional  E_RACE_TYPE				color				= 2;	// 人种
	optional  int32						age					= 3;	// 年龄段
	optional  E_SEX_TYPE				sex					= 4;	// 性别
	optional  E_BOOL					glass				= 5;	// 是否佩戴眼镜
	optional  E_BOOL					beard				= 6;	// 是否有胡须
	optional  E_BOOL					mask				= 7;	// 是否戴口罩
	optional  RECT_INFO					rect				= 8;	// 人脸位置
	optional  float						similarity			= 9;	// 相似度
	optional  string					sourceUrl			= 10;	// 黑名单图或图的ID
	repeated  string					captureUrl			= 11;	// 图片url
}